# fastapi-django

./: .cspell.jsonc  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
mysite/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py
polls/adapters/: __init__.py
polls/migrations/: 0001_initial.py
polls/models/: __init__.py
polls/routers/: __init__.py  choices.py  questions.py
polls/schemas/: __init__.py
