[tool.poetry]
name = "fastapi-django"
package-mode = false
version = "0.1.0"

# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "fastapi and django integration"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# 3rd party
django = "^5.0"
fastapi = "^0.110.1"
pydantic = "^2.0.3"
uvicorn = "^0.29.0"
uvloop = {version = "^0.19.0", markers = 'sys_platform != "win32"'}

# optional
psycopg2 = "^2.9.5"
# you don't need whitenoise if you mount the django APP with FastAPI
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
ipython = "^8.14.0"
mypy = "^1.7.0"
ruff = "^0.3.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
