[project]
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]

description = "fastapi and django integration"
license = "MIT"
name = "fastapi-django"
readme = "README.md"
version = "0.1.0"

requires-python = ">=3.10"

# you don't need whitenoise if you mount the django APP with FastAPI
dependencies = [
  "django>=5.1.3",
  "fastapi>=0.115.5",
  "httptools>=0.6.4",
  "orjson>=3.10.11",
  "psycopg>=3.2.3", # for postgres
  "pydantic>=2.9.2",
  "uvicorn>=0.32.0",
  "uvloop>=0.21.0; sys_platform != 'win32'",
  "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.1.1",
  "ipython>=8.29.0",
  "ruff>=0.7.3",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"
